<resources>
    <string name="app_name">Asclepius</string>

    <string name="gallery">Galeri</string>
    <string name="classify">Classify Skin</string>
    <string name="analyze">Analyze</string>
    <string name="save_result">Save Result</string>
    <string name="delete_result">Delete Result</string>

    <string name="saved_result">Saved Result</string>
    <string name="analyzed_result">Analyzed Result</string>
    <string name="news_title">News Title</string>

    <string name="empty_saved_result">There\'is no saved classification.</string>
    <string name="empty_image_warning">Please input the image first.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
</resources>